--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: rRDPData
 Title: Database for the Default RDP Classifier
 Description: Database used by the default RDP Classifier
-Version: 0.101.0
+Version: 0.101.1
 Date: 2014-08-19
 Author: Michael Hahsler, Anurag Nagar
 Maintainer: Michael Hahsler <mhahsler@lyle.smu.edu>
-biocViews: Genetics, Sequencing, Infrastructure, Classification
+biocViews: SequencingData, RNASeqData, MicrobiomeData
 Depends: rRDP
 SystemRequirements: Java
 License: GPL-2
